--- a/Bank_Assignment/Bank_Assignment.csproj
+++ b/Bank_Assignment/Bank_Assignment.csproj
@@ -44,8 +44,11 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="Address.cs" />
+    <Compile Include="Bank.cs" />
+    <Compile Include="CheckingAc.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SavingsAc.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
